bin_PROGRAMS=tcp-shaping

tcp_shaping_SOURCES=main.cpp logger.cpp

tcp_shaping_CPPFLAGS=-I../libs -DBOOST_ALL_DYN_LINK $(PTHREAD_CFLAGS) $(BOOST_CPPFLAGS)
tcp_shaping_LDADD=-lpthread $(PTHREAD_LIBS) $(BOOST_LDFLAGS) $(BOOST_ASIO_LIB) $(BOOST_LOG_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_THREAD_LIB)
